# cs-notes

./: .gitignore  README.md  contest.md  cs-notes.geany  interview.md  reading.md  sql.md  subject.md  yt-dlp.md  ytd-dlp.md
algorithms/: index.md
ansible/: installation.md  kafka-playbook.yml  re-usable.md  remove-kafka.yml  zookeeper-playbook.yml
apache/: install.md
api/: api-spec.md
azure/: storage.md
canvas-lms/: authorization.md  development-start.md  lmi.md  nginx-passenger-canvas.conf
ceph/: install.md
cicd/: gitlab-ci.md  kafka-command.md  laravel-docker-compose.md  sonarqube-dmm-resort.md  sonarqube.md  sonarqube_installation.md
cloud/: aws.md
compiler/: README.md
computer/: build-pc.md  keyboard.md  tool.md
computer-architecture/: README.md  cmos.md  combinational_logic.md  computer-architecture.tex  computer-memory.md  floating_point_number.md  note1_big_picture.md  note2_digital_abstraction.md  note3_number_representation.md
database/: README.md  database_design.md  database_migration.md  datetime.md  jpa.md  (+9 more)
programming/python/sqlalchemy-demo/: README.md  load_data.py  pyproject.toml  run_server.py  test_db.py
programming/python/sqlalchemy-demo/app/: app.py  config.py  db.py  models.py  queries.py  routers.py  schemas.py
programming/python/sqlalchemy-demo/db/: schema.sql
programming/python/sqlalchemy-demo/db/data/: products.csv
programming/python/sqlalchemy-demo/db/migrations/: 20240108101657_create_manufacturer_product.sql  20240109033102_product_country.sql
programming/python/sqlalchemy-demo/db/scripts/: import_products.py
(+437 files in other folders)
